<resources>
    <string name="app_name">ECNUer\'s Helper</string>
    <!--    主界面 author:Apochens -->
    <string name="main_study_time">你已经学习了%1$d小时%2$d分钟了</string>
    <string name="main_homework_plan">作业计划</string>
    <string name="main_problems">错题</string>
    <string name="main_test_schedule">考试安排</string>
    <string name="main_scores_record">成绩</string>
    <string name="main_finance_record">记账</string>
    <string name="main_diary">日记</string>
    <string name="main_class_schedule">课程表</string>
    <string name="main_start_study">开始学习</string>

    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="timeRange1">一 08:00 ~ 08:45</string>
    <string name="timeRange2">二 08:55 ~ 09:40</string>
    <string name="timeRange3">三 10:00 ~ 10:45</string>
    <string name="timeRange4">四 10:55 ~ 11:40</string>
    <string name="timeRange5">五 13:00 ~ 13:45</string>
    <string name="timeRange6">六 13:55 ~ 14:40</string>
    <string name="timeRange7">七 15:00 ~ 15:45</string>
    <string name="timeRange8">八 15:55 ~ 16:40</string>
    <string name="timeRange9">九 18:00 ~ 18:45</string>
    <string name="timeRange10">十 18:55 ~ 19:40</string>
    <string name="timeRange11">十一 20:00 ~ 20:45</string>
    <string name="weekIndex">周次</string>
    <string name="classIndex">节次</string>


</resources>